--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+* ::after,
+*::before {
+  padding: 0;
+  margin: 0;
+}
 
 body {
   margin: 0;
@@ -12,6 +18,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   display: flex;
+  background-color: #dcdef7;
   /* width: 100vw; */
 }
 
@@ -24,5 +31,9 @@ code {
 #root {
   display: flex;
   flex: 1;
-  height: 100vh;
+  /* height: 100vh; */
+}
+
+.scroll-hide::-webkit-scrollbar {
+  display: none;
 }
