[ADD] nsvigste to dashboard after register

--- a/src/components/FormCard/FormCard.styles.scss
+++ b/src/components/FormCard/FormCard.styles.scss
@@ -1,5 +1,5 @@
 .form-card {
-    background-color: white;
+    background-color: rgba($color: #ffffff, $alpha: 0.3);
     border-radius: 4px;
     
     .form-content {
